Add info on deliverables, topics.

--- a/01_description.Rmd
+++ b/01_description.Rmd
@@ -4,6 +4,19 @@ PQHS 432 (cross-listed as, for example, CRSP 432 and MPHP 432, and formerly know
 
 This is a good course for people who want to learn how to use the R language to get information from data, and who want to learn about making comparisons and building models to help make meaningful progress in research, focusing on questions from biology, medicine and public health. We spend time managing and visualizing data, building models and making predictions, and other things thought of as "data science" - in essence, this highly applied course focuses on modern, more than classical, tools for learning from data. The course is taught using the R statistical software and RStudio environments, with the material discussed in 431 assumed in 432. Students learned a lot of R in the 431 course, and that material remains available at https://github.com/THOMASELOVE/431. We'll continue to use R Studio and R Markdown as tools to help make R work better, and perform our research in replicable ways.
 
+## General Approach / Topics
+
+The course covers the following general topics, roughly in this order, through early April. Additional topics (for the remainder of April) will be determined later in the semester.
+
+1. Linear Regression (including weighted and robust approaches, variable selection, dealing with missing data, fitting non-linear relationships through predictor transformation, cross-validation approaches, and multi-factor ANOVA and ANCOVA)
+2. Logistic Regression (including both models for binary outcomes, and models for proportions, and risk adjustment)
+3. Generalized Linear Models (including regression models for count data, multi-categorical outcomes)
+4. The Statistical Crisis in Science
+5. Cluster Analysis (mostly in the form of Principal Components Analysis)
+6. Survival Analysis (Kaplan-Meier curves and Cox Regression)
+
+A more detailed and up-to-date plan is contained on the [Schedule page for the course](https://github.com/THOMASELOVE/432-2018/blob/master/SCHEDULE.md).
+
 ## Prerequisites
 
 Taking 432 without 431 is not recommended. The pace can be brisk at times, but all CWRU students who feel up to it are welcome, in any field of study. 
@@ -27,3 +40,6 @@ https://github.com/THOMASELOVE/432-2018 is the place to go for everything relate
 - instructions and hints related to the **Projects**
 - various outside **Texts**
 - a detailed **Schedule** of classes and deadlines
+- details on the **Quizzes**
+
+
