--- a/03_teachingassistants.Rmd
+++ b/03_teachingassistants.Rmd
@@ -2,11 +2,11 @@
 
 The teaching assistants for 431 this year are Claudia Cabrera, Omar Alaber, Rosie Conic, Bob Winkelman and Terry Cui. They are the people answering 431-help at case dot edu, and they are the people holding the bulk of our office hours. Most of them has been in your shoes - they've taken the course in the past, and they enjoyed it enough to come back for more. Many have volunteered their precious time and energy to help make the course happen, and we couldn't be more delighted to welcome you to the course.
 
-To contact the TAs, email `431-help at case dot edu`.
+To contact the TAs, email `431-help at case dot edu`, which is open starting Tuesday January 16.
 
 ## Office Hours for TAs
 
-Teaching Assistant Office Hours are held in WG-56 (Computing Lab) or WG-67 (Student Lounge) on the ground floor of the Wood building, so be sure to look in both places if you need help. 
+Teaching Assistant Office Hours are held in WG-56 (Computing Lab) or WG-67 (Student Lounge) on the ground floor of the Wood building, so be sure to look in both places if you need help. Office hours will begin in the second week of classes, and a full schedule will be announced before that date. 
 
 ## Claudia Cabrera
 
